<resources>
    <string name="app_name">Kinopedia</string>
    <string name="title_home">Главная</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_search">Поиск</string>
    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_await">Ожидаемые новинки</string>
    <string name="categories">Категории</string>
    <string name="all">Все</string>
    <string name="categories_movie">Фильмы</string>
    <string name="categories_serial">Сериалы</string>
    <string name="categories_anime">Аниме</string>
    <string name="categories_cartoon">Мультики</string>
    <string name="coming_soon">Скоро выйдет</string>
    <string name="view_all">Больше</string>
    <string name="list_this_month">Список</string>
    <string name="trending">Популярно</string>
    <string name="coming_this_month">В этом месяце</string>
    <string name="premiers">Премьеры</string>
    <string name="nearest_cinema">Кинотеатры</string>
    <string name="name_home">Привет!</string>
    <string name="text_view_details_film">%1$s, %2$s, %3$s мин, %4$s</string>
    <string name="search_result_description">%1$s, %2$s мин, %3$s</string>
    <string name="number_picker_formatter">%01d</string>
    <string name="details_about_film">Подробнее о фильме</string>
    <string name="description_about_film">Описание</string>
    <string name="title_actors">Актеры</string>
    <string name="title_stuff">Съемочная команда</string>
    <string name="title_similar_films">Похожие фильмы</string>
    <string name="want_to_watch">Хочу посмотреть</string>
    <string name="where_to_watch">Где смотреть</string>
    <string name="hint_search">Поиск</string>
    <string name="reset">Сбросить</string>
    <string name="from">С</string>
    <string name="to">По</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="any">любой</string>
    <string name="every">любая</string>
    <string name="all_genres">все жанры</string>
    <string name="country">Страна</string>
    <string name="selected_country_any">любая</string>
    <string name="rating">Рейтинг</string>
    <string name="no_matter">неважно</string>
    <string name="num_vote">NUM_VOTE</string>
=    <string name="sort_by">Сортировать по</string>
    <string name="sort_by_date">дате</string>
    <string name="sort_by_popular">популярности</string>
    <string name="sort_by_rating">рейтингу</string>
    <string name="show">Показать</string>
    <string name="collections">Подборки</string>
    <string name="collection_drama">Драмы</string>
    <string name="collection_comedy">Комедии</string>
    <string name="collection_fantasy">Фэнтези</string>
    <string name="collection_detective">Детективы</string>
    <string name="collection_thriller">Триллеры</string>
    <string name="collection_horror">Ужасы</string>
    <string name="top_twenty">Топ 20</string>
    <string name="select">Выбрать</string>
    <string name="year_eng">YEAR</string>
    <string name="title_fragment_filter">Поиск по фильтрам</string>
    <string name="title_fragment_filter_result">Результаты поиска</string>
    <string name="to_favourite">В избранное</string>
    <string name="premiere_took_place">Премьера состоялась %1s</string>
    <string name="search_movies">Поиск фильмов</string>
    <string name="loading_error">Ошибка</string>
    <string name="try_again">Попробовать еще раз</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="film_id_bundle">filmId</string>
    <string name="wink">wink</string>
    <string name="delete_from_favourite">Удалить из избранного</string>
    <string name="add_to_favourite">В избранное</string>
    <string name="rating_eng">RATING</string>
    <string name="no_permission_to_use_gps">Нет разрешения на использование GPS</string>
    <string name="cinemas">Кинотеатры</string>
    <string name="city">Город</string>
    <string name="premier_in_russia">Премьера в России:</string>


</resources>