<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="viewModel"
            type="com.example.kinopedia.ui.filter.viewmodel.FilterViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_home_background">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_filter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/prussian_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/empty_background"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/title_toolbar_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/title_fragment_filter"
                android:textAppearance="@style/toolbar_title" />

            <TextView
                android:id="@+id/title_toolbar_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="12dp"
                android:text="@string/reset"
                android:textAppearance="@style/toolbar_reset" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_filter">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/genre"
                    android:textAppearance="@style/title_filters_page"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/change_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/year"
                    android:textAppearance="@style/title_filters_page"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_genre" />


                <TextView
                    android:id="@+id/selected_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any"
                    android:textAppearance="@style/tittle_selected"
                    app:layout_constraintBaseline_toBaselineOf="@id/change_year"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.96"
                    app:layout_constraintStart_toEndOf="@id/change_year" />

                <TextView
                    android:id="@+id/more_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/all_genres"
                    android:textAppearance="@style/tittle_selected"
                    app:layout_constraintBaseline_toBaselineOf="@id/title_genre"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.956"
                    app:layout_constraintStart_toEndOf="@+id/title_genre" />

                <TextView
                    android:id="@+id/change_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="78dp"
                    android:text="@string/country"
                    android:textAppearance="@style/title_filters_page"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/change_year" />

                <TextView
                    android:id="@+id/selected_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/every"
                    android:textAppearance="@style/tittle_selected"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBaseline_toBaselineOf="@id/change_country"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.95"
                    app:layout_constraintStart_toEndOf="@id/change_country" />

                <TextView
                    android:id="@+id/title_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/rating"
                    android:textAppearance="@style/title_filters_page"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/change_country" />

                <TextView
                    android:id="@+id/selected_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_matter"
                    android:textAppearance="@style/tittle_selected"
                    app:layout_constraintBaseline_toBaselineOf="@id/title_rating"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.95"
                    app:layout_constraintStart_toEndOf="@id/title_rating" />

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/range_slider"
                    style="@style/my_slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="26dp"
                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_rating"
                    app:thumbColor="@color/light_blue"
                    app:trackColorActive="@color/light_blue"
                    app:trackColorInactive="@color/dark_blue" />

                <TextView
                    android:id="@+id/title_sort_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/sort_by"
                    android:textAppearance="@style/title_filters_page"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/range_slider"/>

                <TextView
                    android:id="@+id/sort_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/sort_by_rating"
                    android:textAppearance="@style/title_filters_page"
                    android:textColor="@color/light_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/title_sort_by"
                    app:layout_constraintTop_toBottomOf="@+id/range_slider" />

                <Button
                    android:id="@+id/send_filters"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="168dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_filters_page_show"
                    android:elevation="1dp"
                    android:text="@string/show"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_sort_by"
                    app:layout_constraintVertical_bias="1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>