<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_home_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <TextView
            android:id="@+id/premiers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/premiers"
            android:textAppearance="@style/premiers"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/view_all_this_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_this_month"
            android:textAppearance="@style/view_all_this_month"
            app:layout_constraintBaseline_toBaselineOf="@id/premiers"
            app:layout_constraintEnd_toEndOf="@id/content_end" />


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/premiers" />


        <TextView
            android:id="@+id/coming_soon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/coming_soon"
            android:textAppearance="@style/title_home"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/viewPager" />

        <TextView
            android:id="@+id/view_all_coming_soon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textAppearance="@style/view_all"
            app:layout_constraintBaseline_toBaselineOf="@id/coming_soon"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/coming_soon" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_coming_soon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:overScrollMode="ifContentScrolls"
            android:paddingStart="24dp"
            android:paddingTop="18dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/coming_soon" />
        />

        <Button
            android:id="@+id/nearest_cinema_button"
            style="@style/PrimaryColoredButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/nearest_cinema"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/recyclerView_coming_soon" />

        <TextView
            android:id="@+id/trending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/trending"
            android:textAppearance="@style/title_home"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/nearest_cinema_button" />

        <TextView
            android:id="@+id/view_all_trending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textAppearance="@style/view_all"
            app:layout_constraintBaseline_toBaselineOf="@id/trending"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/trending" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_trending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:minHeight="300dp"
            android:orientation="horizontal"
            android:overScrollMode="ifContentScrolls"
            android:paddingStart="24dp"
            android:paddingTop="18dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/trending" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>